--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salutation</title>
+    <title>About Page</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
 <body>
@@ -17,9 +16,9 @@
         </nav>
     </header>
     <main>
-        <h1>Message de bienvenue</h1>
-        <p>{{ message }}</p>
+        <h1> About page</h1>
     </main>
+
 </body>
 
 </html>
