--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,41 @@
 <html>
 
 <head>
-    <title>HomePage</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    <title>Home Page</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
 <body>
-    <h1>Veuillez entrer votre nom</h1>
-    <p>ou un pseudo comme vous voulez</p>
-    <form action="." method="POST">
-        <input type="text" name="username">
-        <button type="submit">OK</button>
-    </form>
+
+    <header>
+        <nav>
+            <ul>
+                <li><a href="{{ url_for('index') }}">Home</a></li>
+                <li><a href="{{ url_for('about') }}">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Home Page</h1>
+        <form method="post" action=" . ">
+            <label for="prenom">Prénom:</label>
+            <input type="text" name="prenom" required><br>
+
+            <label for="nom">Nom:</label>
+            <input type="text" name="nom" required><br>
+
+            <label for="sexe">Sexe:</label>
+            <select name="sexe" required>
+                <option value="homme">Homme</option>
+                <option value="femme">Femme</option>
+            </select><br>
+
+            <label for="pseudo">Pseudo:</label>
+            <input type="text" name="pseudo" required><br>
+
+            <input type="submit" value="Valider">
+        </form>
+    </main>
 </body>
 
 </html>
