--- a/templates/about.html
+++ b/templates/about.html
@@ -1,24 +1,9 @@
-<!doctype html>
-<html lang="en">
+{% extends 'layout.html' %}
 
-<head>
-    <title>About Page</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-</head>
+{% block title %}
+About page
+{% endblock %}
 
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="{{ url_for('index') }}">Home</a></li>
-                <li><a href="{{ url_for('about') }}">About</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1> About page</h1>
-    </main>
-
-</body>
-
-</html>
+{% block content %}
+<h1> About page</h1>
+{% endblock %}
