--- a/templates/index.html
+++ b/templates/index.html
@@ -1,42 +1,27 @@
-<!doctype html>
-<html>
+{% extends 'layout.html' %}
 
-<head>
-    <title>Home Page</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
-</head>
+{% block title %}
+Home page
+{% endblock %}
 
-<body>
+{% block content %}
+<h1>Home Page</h1>
+<form method="post" action=" . ">
+    <label for="prenom">Prénom:</label>
+    <input type="text" name="prenom" required><br>
 
-    <header>
-        <nav>
-            <ul>
-                <li><a href="{{ url_for('index') }}">Home</a></li>
-                <li><a href="{{ url_for('about') }}">About</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Home Page</h1>
-        <form method="post" action=" . ">
-            <label for="prenom">Prénom:</label>
-            <input type="text" name="prenom" required><br>
+    <label for="nom">Nom:</label>
+    <input type="text" name="nom" required><br>
 
-            <label for="nom">Nom:</label>
-            <input type="text" name="nom" required><br>
+    <label for="sexe">Sexe:</label>
+    <select name="sexe" required>
+        <option value="homme">Homme</option>
+        <option value="femme">Femme</option>
+    </select><br>
 
-            <label for="sexe">Sexe:</label>
-            <select name="sexe" required>
-                <option value="homme">Homme</option>
-                <option value="femme">Femme</option>
-            </select><br>
+    <label for="pseudo">Pseudo:</label>
+    <input type="text" name="pseudo" required><br>
 
-            <label for="pseudo">Pseudo:</label>
-            <input type="text" name="pseudo" required><br>
-
-            <input type="submit" value="Valider">
-        </form>
-    </main>
-</body>
-
-</html>
+    <input type="submit" value="Valider">
+</form>
+{% endblock %}
