ajout des news et de la quotation avec gestion du cas où la société saisie ne correspond à aucun ticker

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,9 @@ Home page
     <label for="pseudo">Pseudo:</label>
     <input type="text" name="pseudo" required><br>
 
+    <label for="companyName">Société recherchée:</label>
+    <input type="text" name="companyName" required><br>
+
     <input type="submit" value="Valider">
 </form>
 {% endblock %}
