--- a/templates/bienvenue.html
+++ b/templates/bienvenue.html
@@ -19,6 +19,25 @@
     <main>
         <h1>Message de bienvenue</h1>
         <p>{{ message }}</p>
+        <p>{{ company }}</p>
+        {% if news != {} %}
+        <ul>
+            {% for item in news.body %}
+            <li>{{ item.description }}</li>
+
+            {% endfor %}
+        </ul>
+        {% else %}
+        La société saisie ne correspond à aucune entrée connue. Veuillez saisir un nom correct, en suivant le lien
+        suivant : <a href="{{ url_for('index') }}">Home</a>
+        {% endif %}
+
+        <p>
+            {% if quotes != {} %}
+            The quote as of {{ quotes.body.primaryData.lastTradeTimestamp}} is {{
+            quotes.body.primaryData.lastSalePrice}}
+            {% endif %}
+        </p>
     </main>
 </body>
 
