fin de l'appel API pour renvoyer les news et les quotes + enregistrement des logs

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,6 +15,7 @@
             <ul>
                 <li><a href="{{ url_for('index') }}">Home</a></li>
                 <li><a href="{{ url_for('utilisateurs_inscrits') }}">Utilisateurs inscrits</a></li>
+                <li><a href="{{ url_for('logs') }}">Logs</a></li>
                 <li><a href="{{ url_for('about') }}">About</a></li>
             </ul>
         </nav>
