--- a/templates/bienvenue.html
+++ b/templates/bienvenue.html
@@ -1,44 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'layout.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salutation</title>
-</head>
+{% block title %}
+Page de recherche
+{% endblock %}
 
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="{{ url_for('index') }}">Home</a></li>
-                <li><a href="{{ url_for('about') }}">About</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Message de bienvenue</h1>
-        <p>{{ message }}</p>
-        <p>{{ company }}</p>
-        {% if news != {} %}
-        <ul>
-            {% for item in news.body %}
-            <li>{{ item.description }}</li>
+{% block content %}
+<h1>Votre recherche</h1>
+<p>{{ message }}</p>
+<p>{{ company }}</p>
+{% if news != {} %}
+<ul>
+    {% for item in news.body %}
+    <li>{{ item.description }}</li>
 
-            {% endfor %}
-        </ul>
-        {% else %}
-        La société saisie ne correspond à aucune entrée connue. Veuillez saisir un nom correct, en suivant le lien
-        suivant : <a href="{{ url_for('index') }}">Home</a>
-        {% endif %}
+    {% endfor %}
+</ul>
+{% else %}
+La société saisie ne correspond à aucune entrée connue. Veuillez saisir un nom correct, en suivant le lien
+suivant : <a href="{{ url_for('index') }}">Home</a>
+{% endif %}
 
-        <p>
-            {% if quotes != {} %}
-            The quote as of {{ quotes.body.primaryData.lastTradeTimestamp}} is {{
-            quotes.body.primaryData.lastSalePrice}}
-            {% endif %}
-        </p>
-    </main>
-</body>
-
-</html>
+<p>
+    {% if quotes != {} %}
+    The quote as of {{ quotes.body.primaryData.lastTradeTimestamp}} is {{
+    quotes.body.primaryData.lastSalePrice}}
+    {% endif %}
+</p>
+{% endblock %}
