--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,8 @@
                 <li><a href="{{ url_for('index') }}">Home</a></li>
                 <li><a href="{{ url_for('utilisateurs_inscrits') }}">Utilisateurs inscrits</a></li>
                 <li><a href="{{ url_for('logs') }}">Logs</a></li>
-                <li><a href="{{ url_for('about') }}">About</a></li>
+                <li><a href="{{ url_for('form_file') }}">Form File</a></li>
+                <!-- <li><a href="{{ url_for('statistiques') }}">Statistiques</a></li> -->
             </ul>
         </nav>
     </header>
