--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,6 +20,7 @@
                 <li><a href="{{ url_for('logs') }}">Logs</a></li>
                 <li><a href="{{ url_for('form_file') }}">Form File</a></li>
                 <li><a href="{{ url_for('form_chart')}}">Form chart</a></li>
+                <li><a href="{{ url_for('feed_model')}}">Feed Model</a></li>
                 <!-- <li><a href="{{ url_for('statistiques') }}">Statistiques</a></li> -->
             </ul>
         </nav>
