adding the possibility to draw a digit and make it predicted by my app

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,9 @@
                 <li><a href="{{ url_for('form_file') }}">Form File</a></li>
                 <li><a href="{{ url_for('form_chart')}}">Form chart</a></li>
                 <li><a href="{{ url_for('feed_model')}}">Feed Model</a></li>
-                <!-- <li><a href="{{ url_for('statistiques') }}">Statistiques</a></li> -->
+                <li><a href="{{ url_for('draw')}}">Draw</a></li>
+                <li><a href="{{ url_for('predict')}}">Predict</a></li>
+
             </ul>
         </nav>
     </header>
