--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,8 @@
-* {
+#hero{
+  min-height: 100vh;
+}
+
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -39,4 +43,4 @@ main{
 
 canvas {
   border: 1px solid #000;
-}
+} */
