--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.min.css')}}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <!-- Add Plotly CDN for rendering the chart -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
@@ -12,6 +13,7 @@
 </head>
 
 <body>
+    {% block header %}
     <header>
         <nav>
             <ul>
@@ -26,12 +28,17 @@
             </ul>
         </nav>
     </header>
-    <main>
+    {% endblock %}
 
-        {% block content %}
-        {% endblock %}
 
-    </main>
+    {% block content %}
+    {% endblock %}
+
+    {% block footer%}
+    <footer class="bg-primary text-light text-center pt-3 pb-3 border-top">
+        Made with enthousiasm by Carozum - jan 2024
+    </footer>
+    {% endblock %}
 </body>
 
 </html>
