--- a/templates/bienvenue.html
+++ b/templates/bienvenue.html
@@ -7,23 +7,6 @@ Page de recherche
 {% block content %}
 <h1>Votre recherche</h1>
 <p>{{ message }}</p>
-<p>{{ company }}</p>
-{% if news != {} %}
-<ul>
-    {% for item in news.body %}
-    <li>{{ item.description }}</li>
+<p><a href="{{url_for('infos_company')}}">Me renseigner sur une entreprise</a></p>
 
-    {% endfor %}
-</ul>
-{% else %}
-La société saisie ne correspond à aucune entrée connue. Veuillez saisir un nom correct, en suivant le lien
-suivant : <a href="{{ url_for('index') }}">Home</a>
-{% endif %}
-
-<p>
-    {% if quotes != {} %}
-    The quote as of {{ quotes.body.primaryData.lastTradeTimestamp}} is {{
-    quotes.body.primaryData.lastSalePrice}}
-    {% endif %}
-</p>
 {% endblock %}
