--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,8 +15,8 @@
 <body>
     {% block header %}
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-md navbar-dark bg-primary ">
+            <div class="container-fluid ">
                 <a class="navbar-brand" href="{{ url_for('index') }}">@carozum</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -26,21 +26,30 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
 
-                        <a class="nav-link " aria-current="page" href="{{ url_for('bienvenue') }}">Accueil</a>
-                        <a class="nav-link" aria-current="page" href="{{ url_for('infos_company') }}">Infos
-                            Company</a>
-                        <a class="nav-link" href="{{ url_for('form_file') }}">Statistiques</a>
-                        <a class="nav-link" href="{{ url_for('form_chart') }}">Quotations</a>
-                        <a class="nav-link" href="{{ url_for('feed_model') }}">Feed Mnist</a>
-                        <a class="nav-link" href="{{ url_for('draw') }}">Drawing Mnist</a>
-                        <a class="nav-link" href="{{ url_for('utilisateurs_inscrits') }}">Backend-users</a>
-                        <a class="nav-link" href="{{ url_for('logs') }}">Backend-logs</a>
+                        <a class="nav-link pl-5" aria-current="page" href="{{ url_for('bienvenue') }}">Accueil</a>
+                        <a class="nav-link pl-3" aria-current="page" href="{{ url_for('infos_company') }}">News</a>
+                        <a class="nav-link pl-3" href="{{ url_for('form_file') }}">Stats</a>
+                        <a class="nav-link pl-3" href="{{ url_for('form_chart') }}">Quotations</a>
+                        <a class="nav-link pl-3" href="{{ url_for('feed_model') }}">Feed</a>
+                        <a class="nav-link pl-3" href="{{ url_for('draw') }}">Draw</a>
+                        <a class="nav-link pl-3" href="{{ url_for('utilisateurs_inscrits') }}">Users</a>
+                        <a class="nav-link pl-3" href="{{ url_for('logs') }}">Logs</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
+
     {% endblock %}
+
+    <div class="hero-page container-fluid bg-light p-5 ">
+        <div class="row align-items-center justify-content-center p-3">
+            <h1 class="col-md-10 col-lg-6 text-center">
+                {% block h1%}
+                {% endblock %}
+            </h1>
+        </div>
+    </div>
 
 
     {% block content %}
