last commit of the day bootstrap

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@ Home page
 {% block header %}
 
 {% endblock %}
+{% block hero %}
+{% endblock %}
 
 {% block content %}
 <main id="hero" class="container-fluid bg-primary text-light pb-3 pt-5">
