--- a/templates/infos-company.html
+++ b/templates/infos-company.html
@@ -1,36 +1,23 @@
 {% extends 'layout.html' %} {% block title %} Recherche company {% endblock %}
-{% block content %}
-<h1>Saisir une entreprise</h1>
-<form
-  method="post"
-  action=" {{ url_for('infos_company')}} "
-  class="border p-2 bg-light text-dark rounded"
->
-  <label for="companyName" class="form-label">Société recherchée:</label>
-  <input type="text" class="form-control" name="companyName" required /><br />
+{% block h1%} Latest News {% endblock %} {% block content %}
 
-  <input type="submit" value="Valider" class="btn btn-primary" />
-</form>
+<main class="container p-5" style="min-height: 62vh">
+  <h2 class="h4 pb-5">
+    Quel est le nom de la société dont vous voulez connaitre les dernières
+    actualités?
+  </h2>
 
-{#
-<h2>Vos nouvelles</h2>
-{% if news != {} %}
-<ul>
-  {% for item in news.body %}
-  <li>{{ item.description }}</li>
+  <form
+    method="post"
+    action=" {{ url_for('infos_company')}} "
+    class="border p-2 bg-light text-dark rounded"
+  >
+    <label for="companyName" class="form-label"
+      >Saisir une entreprise dans le champ ci dessous</label
+    >
+    <input type="text" class="form-control" name="companyName" required /><br />
 
-  {% endfor %}
-</ul>
-{% else %}
-<p>
-  La société saisie ne correspond à aucune entrée connue. Veuillez saisir un nom
-  correct
-</p>
-{% endif %}
-
-<p>
-  {% if quotes != {} %} The quote as of {{
-  quotes.body.primaryData.lastTradeTimestamp}} is {{
-  quotes.body.primaryData.lastSalePrice}} {% endif %}
-</p>
-#} {% endblock %}
+    <input type="submit" value="Valider" class="btn btn-primary" />
+  </form>
+</main>
+{% endblock %}
