--- a/templates/infos-company.html
+++ b/templates/infos-company.html
@@ -7,14 +7,8 @@
     actualités?
   </h2>
 
-  <form
-    method="post"
-    action=" {{ url_for('infos_company')}} "
-    class="border p-2 bg-light text-dark rounded"
-  >
-    <label for="companyName" class="form-label"
-      >Saisir une entreprise dans le champ ci dessous</label
-    >
+  <form method="post" action=" {{ url_for('infos_company')}} " class="border p-2 bg-light text-dark rounded">
+    <label for="companyName" class="form-label">Saisir une entreprise dans le champ ci dessous</label>
     <input type="text" class="form-control" name="companyName" required /><br />
 
     <input type="submit" value="Valider" class="btn btn-primary" />
