--- a/templates/resultat-company.html
+++ b/templates/resultat-company.html
@@ -16,26 +16,44 @@ Vos actualités
 
 {% block content %}
 
+<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{{url_for('bienvenue')}}">Accueil</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Company News</li>
+    </ol>
+</nav>
 
-<main class="container p-5" style="min-height: 62vh">
-    <h2 class="h4 pb-5">Et voici!</h2>
-
-    {% if news != {} %}
-    <ul>
-        {% for item in news.body %}
-        <li>{{ item.description }}</li>
-
-        {% endfor %}
-    </ul>
-    {% else %}
-    <p>La société saisie ne correspond à aucune entrée connue. Veuillez saisir un nom correct</p>
-    {% endif %}
-
+<main class="container p-5 overflow-hidden" style="min-height: 62vh">
+    <h2 class="h4 pb-2">Et voici!</h2>
     <p>
+        Info:
         {% if quotes != {} %}
-        The quote as of {{ quotes.body.primaryData.lastTradeTimestamp}} is {{
+        the quote as of {{ quotes.body.primaryData.lastTradeTimestamp}} is {{
         quotes.body.primaryData.lastSalePrice}}
         {% endif %}
     </p>
+
+
+    {% if news != {} %}
+    <div class="row g-3 g-md-4 g-lg-5">
+        {% for item in news.body %}
+        <div class="card col-6 col-lg-4 border shadow">
+            <div class="card-body">
+                <h5 class="card-title">{{item.title}}</h5>
+                <!-- <h6 class="card-subtitle mb-2 text-muted">{{item.pubDate}}</h6> -->
+                <p class="card-text">{{ item.description[:100] }}...</p>
+                <a href="{{item.link}}" class="stretched-link" target="_blank">Ouvrir l'article</a>
+
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
+
+    {% else %}
+    <p class="text-center">La société saisie ne correspond à aucune entrée connue. Veuillez saisir un nom correct</p>
+    {% endif %}
+
+
 </main>
 {% endblock %}
