revue page form-file.html

--- a/templates/bienvenue.html
+++ b/templates/bienvenue.html
@@ -12,12 +12,12 @@ Accueil du site
 
 {% block content %}
 
-<main class="container p-5">
-    <h2 class="h4 pb-5">Voici la liste des services disponibles sur notre site</h2>
+<main id="main-bienvenue" class="container p-4">
+    <h2 class="h4 pb-3">Voici la liste des services disponibles sur notre site</h2>
 
     <div class="row">
         <div class="col-12 col-md-4 ">
-            <div class="card mb-4 shadow">
+            <div class="card mb-4 shadow border-0 rounded-0">
                 <div class="card-body">
                     <h5 class="card-title">Company Latest News</h5>
                     <p class="card-text">Read the news for a company</p>
@@ -26,7 +26,7 @@ Accueil du site
             </div>
         </div>
         <div class="col-12 col-md-4 ">
-            <div class="card mb-4 shadow">
+            <div class="card mb-4 shadow border-0 rounded-0">
                 <div class="card-body">
                     <h5 class="card-title">Company Basic Stats</h5>
                     <p class="card-text">Basics statistics uploading a file.</p>
@@ -35,7 +35,7 @@ Accueil du site
             </div>
         </div>
         <div class="col-12 col-md-4">
-            <div class="card mb-4 shadow">
+            <div class="card mb-4 shadow border-0 rounded-0">
                 <div class="card-body">
                     <h5 class="card-title">Quotation Chart</h5>
                     <p class="card-text">Interactive Company Quotations Chart</p>
@@ -47,7 +47,7 @@ Accueil du site
 
     <div class="row">
         <div class="col-12 col-md-4 ">
-            <div class="card mb-4 shadow">
+            <div class="card mb-4 shadow border-0 rounded-0">
                 <div class="card-body">
                     <h5 class="card-title">Feed my MNIST</h5>
                     <p class="card-text">Feed my model with an image file</p>
@@ -56,7 +56,7 @@ Accueil du site
             </div>
         </div>
         <div class="col-12 col-md-4 ">
-            <div class="card mb-4 shadow">
+            <div class="card mb-4 shadow border-0 rounded-0">
                 <div class="card-body">
                     <h5 class="card-title">Draw for MNIST</h5>
                     <p class="card-text">Make a prediction using a draw.</p>
@@ -65,7 +65,7 @@ Accueil du site
             </div>
         </div>
         <div class="col-12 col-md-4">
-            <div class="card  mb-4 shadow">
+            <div class="card  mb-4 shadow border-0 rounded-0">
                 <div class="card-body">
                     <h5 class="card-title">Backend users list</h5>
                     <p class="card-text">Consult list of users</p>
@@ -76,7 +76,7 @@ Accueil du site
     </div>
     <div class="row">
         <div class="col-12 col-md-4 ">
-            <div class="card  mb-4 shadow">
+            <div class="card  mb-4 shadow border-0 rounded-0">
                 <div class="card-body">
                     <h5 class="card-title">Backend logs list</h5>
                     <p class="card-text">List of the logs</p>
