changing the digit images generated to be black background color and also the canva

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -4,6 +4,7 @@ Quotations Chart {% endblock%} {% block content %}
   <ol class="breadcrumb">
     <li class="breadcrumb-item">
       <a href="{{url_for('bienvenue')}}">Accueil</a>
+      <a href="{{url_for('form_chart')}}">Quotation Form</a>
     </li>
     <li class="breadcrumb-item active" aria-current="page">Quotations chart</li>
   </ol>
