--- a/templates/form-file.html
+++ b/templates/form-file.html
@@ -17,15 +17,15 @@ Create your own statistics
     </ol>
 </nav>
 
-<main class="container p-5 overflow-hidden" style="min-height: 54vh">
+<main class="container p-5 overflow-hidden" style="min-height: 56vh">
     <h2 class="h4 pb-2">Please download your file in csv or xls format:</h2>
     <p>Notre générateur de statistiques fonctionne essentiellement avec des données numériques. Veillez à ce que le
         dataset téléchargé en contienne.</p>
 
 
-    <form method="POST" enctype="multipart/form-data" class="text-center">
-        <input type="file" name="file" accept=".csv, .xls, .xlsx" id="inputFile" class="mb-2 form-control">
-        <button type="submit" class="btn btn-primary " id="inputFile">Obtenir les statistiques</button>
+    <form method="POST" enctype="multipart/form-data" class="border p-2 bg-light text-dark rounded text-center">
+        <input type="file" name="file" accept=".csv, .xls, .xlsx" id="inputFile" class=" form-control">
+        <button type="submit" class="btn btn-primary mt-3" id="inputFile">Obtenir les statistiques</button>
     </form>
 </main>
 {% endblock %}
